fix media query whitespace, handle multiple users when typing

--- a/src/components/styles/components/message-form.scss
+++ b/src/components/styles/components/message-form.scss
@@ -172,7 +172,7 @@
 
   .counter {
     margin-top: 0rem !important;
-    margin-bottom: -0.5rem;
+    // margin-bottom: -0.5rem;
   }
 
   .input-group-prepend {
